--- a/sections/home-page-banner.liquid
+++ b/sections/home-page-banner.liquid
@@ -111,6 +111,28 @@
             <h1 class="banner-heading">{{ block.settings.heading }}</h1>
             <p class="banner-subheading">{{ block.settings.subheading }}</p>
           </div>
+          <img src="{{ block.settings.center_image | img_url: 'master' }}" alt="{{ block.settings.center_alt_text }}"/>
+
+          {% if block.settings.banner-button_show == "show" %}
+          <div class="banner-buttons">
+            <button class="banner-button">
+              <a href="{{ block.settings.button_one_url }}">
+                <span>
+                  {{ block.settings.button_one_text }}
+                </span>
+              </a>
+            </button>
+
+            <button class="banner-button">
+              <a href="{{ block.settings.button_two_url }}">
+                <span>
+                  {{ block.settings.button_two_text }}
+                </span>
+              </a>
+            </button>
+          </div>
+
+          {% endif %}
 
 
           {% if visibility == 'show' %}
@@ -239,10 +261,104 @@ document.addEventListener('DOMContentLoaded', function () {
           "label": "Main Heading",
           "default": "IN MOTION WE FIND FREEDOM AND JOY"
         },
+
         {
           "type":"image_picker",
           "id":"main_image",
           "label":"Main Image"
+        },
+        {
+          "type": "textarea",
+          "id": "subheading",
+          "label": "Subheading",
+          "default": "Unlock the full potential of your online store with our custom Magento development services, designed to enhance performance, boost sales, and deliver a seamless shopping experience."
+        },
+        {
+        "type": "header",
+          "content":"content font color"
+        },
+        {
+          "type":"color",
+          "id":"heading_color",
+          "label":"Heading Color"
+        },
+        {
+          "type":"color",
+          "id":"subheading_color",
+          "label":"Subheading Color"
+        },
+        {
+          "type":"color",
+          "id":"product_list_heading_color",
+          "label":"Product List Heading Color"
+        },
+        {
+          "type":"color",
+          "id":"product_list_item_color",
+          "label":"Product List Item Color"
+        },
+
+        {
+          "type":"header",
+          "content":"Center Image"
+        },
+        {
+          "type":"image_picker",
+          "id":"center_image",
+          "label":"center image"
+        },
+        {
+          "type":"text",
+          "id":"center_alt_text",
+          "label":"Center Image Alt Text",
+          "default":"center image"
+        },
+        {
+          "type":"header",
+          "content":"Button settings"
+        },
+
+        {
+          "type":"select",
+          "id":"banner-button_show",
+          "options":[
+            {
+              "value": "show",
+              "label": "Show button"
+            },
+            {
+              "value": "hide",
+              "label": "Hide button"
+            }
+          ],
+          "label":"Show buttons"
+        },
+        {
+          "type":"text",
+          "id":"button_one_text",
+          "label":"Button First Text",
+          "default":"Shop Now"
+        },
+        {
+          "type":"url",
+          "id":"button_one_url",
+          "label":"Button First Url"
+        },
+        {
+          "type":"text",
+          "id":"button_two_text",
+          "label":"Button Second Text",
+          "default":"New One"
+        },
+        {
+          "type":"url",
+          "id":"button_two_url",
+          "label":"Button Second Url"
+        },
+
+        {
+          "type":"header",
+          "content":"Product display list content"
         },
         {
           "type":"select",
@@ -259,12 +375,7 @@ document.addEventListener('DOMContentLoaded', function () {
             }
           ]
         },
-        {
-          "type": "textarea",
-          "id": "subheading",
-          "label": "Subheading",
-          "default": "Unlock the full potential of your online store with our custom Magento development services, designed to enhance performance, boost sales, and deliver a seamless shopping experience."
-        },
+
         {
           "type":"image_picker",
           "id":"product_list_image_left",
